--- a/working-notes/src/App.css
+++ b/working-notes/src/App.css
@@ -8,13 +8,11 @@
   pointer-events: none;
 }
 
-.App-header {
+.App-top{
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
