--- a/working-notes/src/components/mainText/MainText.css
+++ b/working-notes/src/components/mainText/MainText.css
@@ -9,13 +9,12 @@
     grid-row: 1 / 3;
   }
   .two { 
-    grid-column: 2;
-    grid-row: 1;
+    grid-column: 1 /2;
+    grid-row: 3;
     overflow:auto;
     height: 440px;
-    width: 66%;
   }
   .three { 
-    grid-column: 3;
-    grid-row: 1;
+    grid-column: 2 / 3;
+    grid-row: 3;
   }
