--- a/working-notes/src/components/mainText/MainText.css
+++ b/working-notes/src/components/mainText/MainText.css
@@ -5,20 +5,26 @@
     grid-auto-rows: minmax(100px, auto);
   }
   .one {
-    grid-column: 1;
+    grid-column: 2;
     grid-row: 1 / 3;
   }
   .two { 
-    grid-column: 1 /2;
+    grid-column: 1 /3;
     grid-row: 3;
     overflow:auto;
     height: 440px;
+
+  }
+  .two .section_1{
+      grid-column: 1;
+      grid-row: 1/3;
+      overflow: auto;
   }
   .three { 
     grid-column: 2 / 3;
     grid-row: 3;
   }
   .four{
-    grid-column: 2;
+    grid-column: 1;
     grid-row: 1 / 3;
   }
