feat: finished styling and export

--- a/working-notes/src/App.css
+++ b/working-notes/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-top{
-  background-color: #282c34;
+  background-color: #989898 ; /*282c34;*/
   min-height: 100vh;
   display: flex;
   flex-direction: column;
