--- a/working-notes/src/components/mainText/MainText.css
+++ b/working-notes/src/components/mainText/MainText.css
@@ -1,30 +1,97 @@
+/*
+lightest to darkest
+#8f9779
+#78866b
+#738276
+#738678
+#4d5d53
+*/
+
 .wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
+    background:#8f9779 ;
   }
-  .one {
+  .TheAwesomeTextBox {
+    /*border: 2px solid black;*/
     grid-column: 2;
     grid-row: 1 / 3;
   }
-  .two { 
+  .NoteSection { 
     grid-column: 1 /3;
     grid-row: 3;
     overflow:auto;
     height: 440px;
 
   }
-  .two .section_1{
+  .NoteSection .section_1{
       grid-column: 1;
       grid-row: 1/3;
       overflow: auto;
   }
-  .three { 
-    grid-column: 2 / 3;
-    grid-row: 3;
+  .NoteSection .section_2{
+      grid-column: 1;
+      grid-row: 1/3;
+      overflow: auto;
   }
-  .four{
+  .TheNote { 
+    grid-column: 3 / 4;
+    grid-row: 1 / 4;
+  }
+  .Overview{
+    /*border: 2px solid black;*/
     grid-column: 1;
     grid-row: 1 / 3;
+  }
+
+  input{
+    color:white;
+    width: 80%;
+    height: 30px;
+    text-align: center;
+    box-align:center;
+    border: none;
+    border-bottom: 2px solid #4d5d53;
+    background:none;
+  }
+  input[type=text]:focus{
+    border: 3px solid darkgray;
+  }
+ 
+  button{
+    background-color: #4d5d53;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+  }
+  
+  .TheNote textarea{    
+    width:90%;
+    height: 750px;
+  }
+  .Overview textarea{
+    width:80%;
+    height: 150px;
+  }
+  .TheAwesomeTextBox textarea{
+    width:80%;
+    height: 150px;
+
+  }
+  textarea{ 
+    padding:10px;
+    color:white;   
+    background: none;
+    border: 2px solid #4d5d53;
+    border-radius: 8px;
+    resize: none;
   }
