--- a/working-notes/src/components/notes/TextNote.css
+++ b/working-notes/src/components/notes/TextNote.css
@@ -1,11 +1,14 @@
 .text-note{
     border-radius: 8px;
     border: 1px solid #4d5d53;
-    width: 300px;
-    height:275px;
+    width: 400px;
+    height:400px;
     overflow: auto;
     padding-bottom: 0px;
     box-shadow: 8px 10px 5px #4d5d53;
+}
+.close {
+    float:right;
 }
 .text-note ul{
     border-radius: 8px;
@@ -13,8 +16,8 @@
     list-style-type: none;
     /*border: 2px solid blue;*/
     word-wrap: break-word;
-    width: 235px;
-    height: 160px;
+    width: 330px;
+    height: 200px;
     overflow:auto;
     position: relative;
     margin:10px ;
