--- a/working-notes/src/App.css
+++ b/working-notes/src/App.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(8, 5, 5);
 }
 
 .App-link {
