--- a/working-notes/src/components/mainText/MainText.css
+++ b/working-notes/src/components/mainText/MainText.css
@@ -12,13 +12,13 @@ lightest to darkest
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
-    background:#8f9779 ;
+    background: white/*#8f9779*/ ;
     padding:10px 10px 0px 10px;
   }
   .TheAwesomeTextBox {
     /*border: 2px solid black;*/
-    grid-column: 2;
-    grid-row: 1 / 3;
+    grid-column: 1/3;
+    grid-row: 2 / 3;
   }
   .NoteSection { 
     grid-column: 1 /3;
@@ -27,28 +27,52 @@ lightest to darkest
     height: 440px;
 
   }
-  .NoteSection .section_1{
-      grid-column: 1;
-      grid-row: 1/3;
-      overflow: auto;
-  }
-  .NoteSection .section_2{
-      grid-column: 1;
-      grid-row: 1/3;
-      overflow: auto;
-  }
   .TheNote { 
     grid-column: 3 / 4;
     grid-row: 1 / 4;
   }
   .Overview{
-    /*border: 2px solid black;*/
-    grid-column: 1;
-    grid-row: 1 / 3;
+    /*
+    border: 2px solid black;
+    */
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+  .Overview .wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+    padding:5px 5px 0px 5px;
+  }
+  .OverviewChild label{    
+    font-size: 14px bold;
+    position: center;
+  }
+  .OverviewChild{
+    display: inline-block;
+    max-width: 100%;
+    /*
+    border: 2px solid black;
+    display: inline-block;
+    */
+  }
+  .TheAwesomeTextBoxChild{
+    display: inline-block;
+    max-width: 100%;
+
+  }
+  .wrapper #TheAwesomeTextBox {
+    grid-column: 1/3;
+    grid-row: 1/4;
+
+  }
+  .wrapper #NoteSectionList {
+    grid-column: 3/4;
+    grid-row: 1/4;
+
   }
 
   input{
-    color:white;
+    color:rgb(12, 11, 11);
     width: 80%;
     height: 30px;
     text-align: center;
@@ -64,7 +88,7 @@ lightest to darkest
   button{
     background-color: #4d5d53;
     border: none;
-    color: white;
+    color: rgb(12, 10, 10);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -79,20 +103,39 @@ lightest to darkest
     width:90%;
     height: 750px;
   }
-  .Overview textarea{
-    width:80%;
-    height: 150px;
-  }
   .TheAwesomeTextBox textarea{
     width:80%;
     height: 150px;
 
   }
+  /*
+  .TheAwesomeTextBox #TheAwesomeTextBox, #NoteSectionList{
+    max-width: 50%;
+
+  }*/
+ #NoteSectionList{    
+    height: 400px;
+    overflow:auto;
+  }
+  .TheAwesomeTextBox .wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
   textarea{ 
     padding:10px;
-    color:white;   
+    color:black;   
     background: none;
     border: 2px solid #4d5d53;
     border-radius: 8px;
     resize: none;
+  }
+  
+  .TheAwesomeTextBoxChild li div{
+  }
+  .TheAwesomeTextBoxChild ul{
+    list-style-type: none;
+  }
+  .inline-box-align{
+    display: inline-block;
+    
+
   }
