--- a/working-notes/src/components/mainText/MainText.css
+++ b/working-notes/src/components/mainText/MainText.css
@@ -12,11 +12,10 @@ lightest to darkest
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
-    background: white/*#8f9779*/ ;
+    background: white;
     padding:10px 10px 0px 10px;
   }
   .TheAwesomeTextBox {
-    /*border: 2px solid black;*/
     grid-column: 1/3;
     grid-row: 2 / 3;
   }
@@ -32,9 +31,6 @@ lightest to darkest
     grid-row: 1 / 4;
   }
   .Overview{
-    /*
-    border: 2px solid black;
-    */
     grid-column: 1/3;
     grid-row: 1;
   }
@@ -50,10 +46,6 @@ lightest to darkest
   .OverviewChild{
     display: inline-block;
     max-width: 100%;
-    /*
-    border: 2px solid black;
-    display: inline-block;
-    */
   }
   .TheAwesomeTextBoxChild{
     display: inline-block;
@@ -88,7 +80,7 @@ lightest to darkest
   button{
     background-color: #4d5d53;
     border: none;
-    color: rgb(12, 10, 10);
+    color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -108,11 +100,6 @@ lightest to darkest
     height: 150px;
 
   }
-  /*
-  .TheAwesomeTextBox #TheAwesomeTextBox, #NoteSectionList{
-    max-width: 50%;
-
-  }*/
  #NoteSectionList{    
     height: 400px;
     overflow:auto;
@@ -128,9 +115,6 @@ lightest to darkest
     border-radius: 8px;
     resize: none;
   }
-  
-  .TheAwesomeTextBoxChild li div{
-  }
   .TheAwesomeTextBoxChild ul{
     list-style-type: none;
   }
@@ -139,3 +123,79 @@ lightest to darkest
     
 
   }
+  .NoteSection .wrapper #info_section{ 
+    border: 2px solid #4d5d53;   
+    grid-column: 1;
+    grid-row: 1/4;
+  }
+  .NoteSection .wrapper #notes{ 
+    grid-column: 2 / 4;
+    grid-row: 1/4;
+    text-align: justify;
+    height: 300px;
+    overflow:auto;
+  }
+  table tr td div{
+    display:inline-block;
+    padding: 0px 10px;
+    font-size: 20px;
+  }
+  .noteSectionBackground td{
+    background-color:#4d5d53;
+    padding: 5px 5px; 
+    padding-bottom: 15px;  
+    width:95%;
+
+  }
+  table{
+    width:100%;
+  }
+  table tr td{ 
+    display:inline-block;
+    border-radius: 10px;
+    color:white;
+
+  }
+  table tr {
+    margin: 0px;
+  }
+  li div{
+    font-size: 20px;
+  }
+  .inline-box-align button{
+    padding: 5px 10px ;
+    margin-right: 10px;
+  }
+  .rightAlign{
+    text-align: right;
+  }
+  .leftAlign{
+    text-align: left;
+  }
+  .TheAwesomeTextBoxChild ul{
+    height: 225px;
+    overflow:auto;
+
+  }
+  li #entryNumber{
+    background-color: #4d5d53;
+    margin-left: 10px;
+    border-radius: 50%;
+    font-size: 15px;
+    padding: 2px 7px;
+    color: white;
+  }
+  .tagFormat{
+    padding: 5px 10px;
+    font-size:12px;
+    background-color: #4d5d53;
+    color: white;
+  }
+  td textarea{
+    padding-bottom: 0px;
+  }
+  .textareaFormat
+{
+  width: 100%;
+  padding-bottom: 0px;
+}
