--- a/working-notes/src/components/css/awesome-hub.css
+++ b/working-notes/src/components/css/awesome-hub.css
@@ -8,14 +8,9 @@ lightest to darkest
 */
 
 /*Hub Section*/
-.hub{
-    grid-column: 3 / 4;
-    grid-row: 1;
-
-}
 .hub .wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
     background: white;
@@ -26,51 +21,95 @@ lightest to darkest
     grid-row: 1;
     grid-column: 2;
   }
-  */
   .hub .notelist {
     grid-row: 1;
     grid-column: 1;
 
   }
+  */
+  .hub .new{
+    grid-row:2;
+    grid-column:2/3;
+    /*border:1px solid black;*/
+    padding-bottom: 50px;
+    border:1px solid pink;
+  }
   .hub .upload {
-    grid-row: 1;
-    grid-column: 2;
+    grid-row: 3;
+    grid-column: 2/3;
+    /*border:1px solid black;*/
+    padding-bottom: 50px;
+  }
+  .hub .crypt{
+    grid-row: 4;
+    grid-column: 2/3;
 
   }
 
 
 /*Note Section*/
+/*Wrapper Section */
 .wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(25px, auto);
     background: white;
     padding:10px 10px 0px 10px;
+    border:1px solid rgb(61, 235, 38);
   }
+  .OverviewWrapper {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 10px;
+      grid-auto-rows: minmax(25px, auto);
+      background: white;
+      padding:10px 10px 0px 10px;
+      border:1px solid rgb(27, 11, 167);
+    }
+  /*Wrapper Section */
   .TheAwesomeTextBox {
     grid-column: 1/3;
-    grid-row: 2 / 3;
+    grid-row: 1 ;
+    border:1px solid purple;
   }
   .NoteSection { 
     grid-column: 1 /3;
     grid-row: 3;
     overflow:auto;
     height: 440px;
+    border:1px solid blue;
 
   }
   .TheNote { 
-    grid-column: 3 / 4;
-    grid-row: 2 / 4;
+    grid-column:  3;
+    grid-row: 1;
+    overflow:auto;
+    height: 850px;
+    border:1px solid red;
+  }
+  .TheNote pre{
+    text-align:left;
+    word-wrap: break-word;
+    height:15px;
+    margin: 0px;
+  }
+  .TheNoteTest { 
+    
+    grid-column: 4 ;
+    grid-row: 1;
+    border:1px solid red;
   }
   .Overview{
-    grid-column: 1/3;
+    grid-column: 1 / 4;
     grid-row: 1;
+    border:1px solid orange;
   }
   .Overview .wrapper {
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(50px, auto);
     padding:5px 5px 0px 5px;
+    border:1px solid orange;
   }
   .OverviewChild label{    
     font-size: 14px bold;
@@ -79,11 +118,22 @@ lightest to darkest
   .OverviewChild{
     display: inline-block;
     max-width: 100%;
+    border:1px solid orange;
   }
   .TheAwesomeTextBoxChild{
     display: inline-block;
     max-width: 100%;
 
+  }
+  .TitleSection{
+    grid-column: 1;
+    grid-row: 1;
+    border:1px solid orange;
+  }
+  .notebooklist{
+    grid-column: 2/4;
+    grid-row: 1;
+    border:1px solid orange;
   }
   .wrapper #TheAwesomeTextBox {
     grid-column: 1/3;
@@ -94,6 +144,21 @@ lightest to darkest
     grid-column: 3/4;
     grid-row: 1/4;
 
+  }
+  .wrapper .SectionOneATB{
+    grid-column: 1 / 3;
+    grid-row:2 / 3;
+    border:1px solid orange;
+  }
+  .wrapper .SectionTwoATB{
+    grid-column: 3 / 4;
+    grid-row:2 / 3 ;
+    border:1px solid green;
+  }
+  .wrapper .SectionThreeATB{
+    grid-column: 1 / 4;
+    grid-row:1;
+    border:1px solid blue;
   }
 
   input{
@@ -167,6 +232,7 @@ lightest to darkest
     text-align: justify;
     height: 300px;
     overflow:auto;
+    border:1px solid red;
   }
   table tr td div{
     display:inline-block;
