--- a/working-notes/src/components/css/awesome-hub.css
+++ b/working-notes/src/components/css/awesome-hub.css
@@ -23,12 +23,22 @@ lightest to darkest
 
 .page-wrapper{
   display:grid;
-  grid-template-columns:repeat(2,1fr);
+  grid-template-columns:repeat(2,50vw);
   grid-auto-rows:minmax(20px,auto);
   padding:10px 10px 10px 25px;
   border-top:1px solid black;
   border-left:1px solid black;
 }
+.page-inner-wrapper{
+  display:grid;
+  grid-template-columns:repeat(1,50vw);
+  grid-auto-rows:minmax(20px,auto);
+  padding:10px 10px 10px 25px;
+  border-top:1px solid black;
+  border-left:1px solid black;
+
+}
+/*
 .page-inner-wrapper{
   display:grid;
   grid-template-columns:repeat(1,1fr);
@@ -38,15 +48,7 @@ lightest to darkest
   border-left:1px solid black;
 
 }
-.page-inner-wrapper{
-  display:grid;
-  grid-template-columns:repeat(1,1fr);
-  grid-auto-rows:minmax(20px,auto);
-  padding:10px 10px 10px 25px;
-  border-top:1px solid black;
-  border-left:1px solid black;
-
-}
+*/
 .awesome-wrapper{
   display:grid;
   grid-template-columns:repeat(1,1fr);
@@ -59,15 +61,12 @@ lightest to darkest
 .awesome-col-one{
   Text-align: center;
 }
-.page-inner-col-one{
-}
-.page-inner-col-two{
-  
-}
+
 .page-col-one-wrapper{
   display:grid;
-  grid-template-columns:repeat(1,1fr);
+  grid-template-columns:repeat(1,50vw);
   grid-auto-rows: max-content;
+  word-wrap:break-word;
 }
 .page-col-one-row-one{
   grid-row: 1;
@@ -87,12 +86,12 @@ lightest to darkest
 }
 .page-col-two-wrapper{
   display:grid;
-  grid-template-columns:repeat(1,1fr);
+  grid-template-columns:repeat(1,45vw);
   grid-auto-rows:minmax(20px,auto);
 }
 .page-col-two{
   grid-row: 1;
-  grid-column:2;
+  grid-column:1;
   margin:10px 10px 10px 10px;
   border:1px solid black;
   padding:10px 10px 10px 10px;
@@ -178,17 +177,27 @@ lightest to darkest
     border:1px solid blue;
 
   }
+  .ThePage { 
+    grid-column:  3;
+    grid-row: 1;
+    overflow:auto;
+    height: 775px;
+    border:1px solid red;
+
+  }
   .TheNote { 
     grid-column:  3;
     grid-row: 1;
     overflow:auto;
-    height: 850px;
+    height: 387px;
     border:1px solid red;
   }
   .readOnlyDisplay pre{
     text-align:left;
     word-wrap: break-word;
+    max-width:100%;
     margin: 0px;
+    padding: 8px;
   }
   .TheNoteTest { 
     
