--- a/working-notes/src/components/css/awesome-hub.css
+++ b/working-notes/src/components/css/awesome-hub.css
@@ -18,44 +18,30 @@ lightest to darkest
 .notebook{
   grid-row: 1;
   grid-column:1;
-  padding:10px 10px 10px 25px;
+  padding:10px 10px 10px 10px;
+  background-color: #4d5d53;
 }
 
 .page-wrapper{
   display:grid;
-  grid-template-columns:repeat(2,50vw);
+  grid-template-columns:repeat(2,45vw);
+  grid-gap:5vw;
   grid-auto-rows:minmax(20px,auto);
   padding:10px 10px 10px 25px;
-  border-top:1px solid black;
-  border-left:1px solid black;
+  background-color: #ffffdd;
 }
 .page-inner-wrapper{
   display:grid;
   grid-template-columns:repeat(1,50vw);
   grid-auto-rows:minmax(20px,auto);
   padding:10px 10px 10px 25px;
-  border-top:1px solid black;
-  border-left:1px solid black;
 
 }
-/*
-.page-inner-wrapper{
-  display:grid;
-  grid-template-columns:repeat(1,1fr);
-  grid-auto-rows:minmax(20px,auto);
-  padding:10px 10px 10px 25px;
-  border-top:1px solid black;
-  border-left:1px solid black;
-
-}
-*/
 .awesome-wrapper{
   display:grid;
   grid-template-columns:repeat(1,1fr);
   grid-auto-rows:minmax(20px,auto);
   padding:10px 10px 10px 25px;
-  border-top:1px solid black;
-  border-left:1px solid black;
 
 }
 .awesome-col-one{
@@ -72,7 +58,6 @@ lightest to darkest
   grid-row: 1;
   grid-column:1;
   padding:10px 10px 10px 10px;
-  border-bottom: 1px solid black;
 }
 .page-col-one-row-two{
   grid-row: 2;
@@ -93,15 +78,8 @@ lightest to darkest
   grid-row: 1;
   grid-column:1;
   margin:10px 10px 10px 10px;
-  border:1px solid black;
   padding:10px 10px 10px 10px;
 }
-
-
-
-
-
-
 
 /*Hub Section*/
 .hub .wrapper {
@@ -112,77 +90,32 @@ lightest to darkest
     background: white;
     padding:10px 10px 0px 10px;
   }
-  /*
-  .hub .notelist {
-    grid-row: 1;
-    grid-column: 2;
-  }
-  .hub .notelist {
-    grid-row: 1;
-    grid-column: 1;
-
-  }
-  */
   .hub .new{
     grid-row:2;
     grid-column:2/3;
-    /*border:1px solid black;*/
     padding-bottom: 50px;
-    border:1px solid pink;
   }
   .hub .upload {
     grid-row: 3;
     grid-column: 2/3;
-    /*border:1px solid black;*/
     padding-bottom: 50px;
-  }
-  .hub .crypt{
-    grid-row: 4;
-    grid-column: 2/3;
-
-  }
-
-
-/*Note Section*/
-/*Wrapper Section */
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: minmax(25px, auto);
-    background: white;
-    padding:10px 10px 0px 10px;
-    border:1px solid rgb(61, 235, 38);
   }
   .OverviewWrapper {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-gap: 10px;
       grid-auto-rows: minmax(25px, auto);
-      background: white;
+      background-color: #ffffdd;
       padding:10px 10px 0px 10px;
-      border:1px solid rgb(27, 11, 167);
     }
-  /*Wrapper Section */
-  .TheAwesomeTextBox {
-    grid-column: 1/3;
-    grid-row: 1 ;
-    border:1px solid purple;
-  }
-  .NoteSection { 
-    grid-column: 1 /3;
-    grid-row: 3;
-    overflow:auto;
-    height: 440px;
-    border:1px solid blue;
-
-  }
   .ThePage { 
     grid-column:  3;
     grid-row: 1;
     overflow:auto;
     height: 775px;
-    border:1px solid red;
+    border: 1px solid;
+    box-shadow: 5px 10px #888888;
+    margin-top:5px;
+    background-color:white;
 
   }
   .TheNote { 
@@ -190,7 +123,10 @@ lightest to darkest
     grid-row: 1;
     overflow:auto;
     height: 387px;
-    border:1px solid red;
+    border: 1px solid;
+    box-shadow: 5px 10px #888888;
+    margin-top:5px;
+    background-color:white;
   }
   .readOnlyDisplay pre{
     text-align:left;
@@ -199,73 +135,14 @@ lightest to darkest
     margin: 0px;
     padding: 8px;
   }
-  .TheNoteTest { 
-    
-    grid-column: 4 ;
-    grid-row: 1;
-    border:1px solid red;
-  }
-  .Overview{
-    grid-column: 1 / 4;
-    grid-row: 1;
-    border:1px solid orange;
-  }
-  .Overview .wrapper {
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(50px, auto);
-    padding:5px 5px 0px 5px;
-    border:1px solid orange;
-  }
-  .OverviewChild label{    
-    font-size: 14px bold;
-    position: center;
-  }
-  .OverviewChild{
-    display: inline-block;
-    max-width: 100%;
-    border:1px solid orange;
-  }
-  .TheAwesomeTextBoxChild{
-    display: inline-block;
-    max-width: 100%;
-
-  }
   .TitleSection{
     grid-column: 1;
     grid-row: 1;
-    border:1px solid orange;
   }
   .notebooklist{
     grid-column: 2/4;
     grid-row: 1;
-    border:1px solid orange;
   }
-  .wrapper #TheAwesomeTextBox {
-    grid-column: 1/3;
-    grid-row: 1/4;
-
-  }
-  .wrapper #NoteSectionList {
-    grid-column: 3/4;
-    grid-row: 1/4;
-
-  }
-  .wrapper .SectionOneATB{
-    grid-column: 1 / 3;
-    grid-row:2 / 3;
-    border:1px solid orange;
-  }
-  .wrapper .SectionTwoATB{
-    grid-column: 3 / 4;
-    grid-row:2 / 3 ;
-    border:1px solid green;
-  }
-  .wrapper .SectionThreeATB{
-    grid-column: 1 / 4;
-    grid-row:1;
-    border:1px solid blue;
-  }
-
   input{
     color:rgb(12, 11, 11);
     width: 250px;
@@ -298,18 +175,6 @@ lightest to darkest
     width:90%;
     height: 750px;
   }
-  .TheAwesomeTextBox textarea{
-    width:80%;
-    height: 150px;
-
-  }
- #NoteSectionList{    
-    height: 400px;
-    overflow:auto;
-  }
-  .TheAwesomeTextBox .wrapper {
-    grid-template-columns: repeat(3, 1fr);
-  }
   textarea{ 
     padding:10px;
     color:black;   
@@ -317,96 +182,6 @@ lightest to darkest
     border: 2px solid #4d5d53;
     border-radius: 8px;
     resize: none;
+    background-color:white;
+    box-shadow: 5px 6px #888888;
   }
-  .TheAwesomeTextBoxChild ul{
-    list-style-type: none;
-  }
-  .inline-box-align{
-    display: inline-block;
-    
-
-  }
-  .NoteSection .wrapper #info_section{ 
-    border: 2px solid #4d5d53;   
-    grid-column: 1;
-    grid-row: 1/4;
-  }
-  .NoteSection .wrapper #notes{ 
-    grid-column: 2 / 4;
-    grid-row: 1/4;
-    text-align: justify;
-    height: 300px;
-    overflow:auto;
-    border:1px solid red;
-  }
-  table tr td div{
-    display:inline-block;
-    padding: 0px 10px;
-    font-size: 20px;
-  }
-  .noteSectionBackground td{
-    background-color:#4d5d53;
-    padding-bottom: 10px;  
-    width:95%;
-    vertical-align: center;
-
-  }
-  .noteSectionEdit button{
-    padding: 5px 50px;
-    margin: 0px;
-  }
-  .noteSectionEdit{
-    line-height: 1px;
-  }
-  table{
-    width:100%;
-  }
-  table tr td{ 
-    display:inline-block;
-    border-radius: 10px;
-    color:white;
-
-  }
-  table tr {
-    margin: 0px;
-  }
-  li div{
-    font-size: 20px;
-  }
-  .inline-box-align button{
-    padding: 5px 10px ;
-    margin-right: 10px;
-  }
-  .rightAlign{
-    text-align: right;
-  }
-  .leftAlign{
-    text-align: left;
-  }
-  .TheAwesomeTextBoxChild ul{
-    height: 225px;
-    overflow:auto;
-
-  }
-  li #entryNumber{
-    background-color: #4d5d53;
-    margin-left: 10px;
-    border-radius: 50%;
-    font-size: 15px;
-    padding: 2px 7px;
-    color: white;
-  }
-  .tagFormat{
-    padding: 5px 10px;
-    font-size:12px;
-    background-color: #4d5d53;
-    color: white;
-  }
-  td textarea{
-    padding-bottom: 0px;
-  }
-  .textareaFormat
-{
-  width: 100%;
-  padding-bottom: 0px;
-}
