--- a/working-notes/src/components/css/awesome-hub.css
+++ b/working-notes/src/components/css/awesome-hub.css
@@ -6,127 +6,37 @@ lightest to darkest
 #738678
 #4d5d53
 */
-.basic{
-  text-align: left;
+
+select{
+  width:200px;
 }
+.label-header{
+  font-size: 36px;
+  font-weight:bold;
+  margin-right:15px;
+}
+.inner{
+  margin-left:100px;
+}
+
 
 .notebook-wrapper{
-  display:grid;
-  grid-template-columns:repeat(1,1fr);
-  grid-auto-rows:minmax(20px,auto);
+  max-width: 60%;
+  margin: auto;
+  text-align:left;
 }
-.notebook{
-  grid-row: 1;
-  grid-column:1;
-  padding:10px 10px 10px 10px;
-  background-color: #4d5d53;
+.switch{
+  text-align:center;
+  margin-top:20px;
 }
-
-.page-wrapper{
-  display:grid;
-  grid-template-columns:repeat(2,45vw);
-  grid-gap:5vw;
-  grid-auto-rows:minmax(20px,auto);
-  padding:10px 10px 10px 25px;
-  background-color: #ffffdd;
-}
-.page-inner-wrapper{
-  display:grid;
-  grid-template-columns:repeat(1,50vw);
-  grid-auto-rows:minmax(20px,auto);
-  padding:10px 10px 10px 25px;
-
-}
-.awesome-wrapper{
-  display:grid;
-  grid-template-columns:repeat(1,1fr);
-  grid-auto-rows:minmax(20px,auto);
-  padding:10px 10px 10px 25px;
-
-}
-.awesome-col-one{
-  Text-align: center;
-}
-
-.page-col-one-wrapper{
-  display:grid;
-  grid-template-columns:repeat(1,50vw);
-  grid-auto-rows: max-content;
-  word-wrap:break-word;
-}
-.page-col-one-row-one{
-  grid-row: 1;
-  grid-column:1;
-  padding:10px 10px 10px 10px;
-}
-.page-col-one-row-two{
-  grid-row: 2;
-  grid-column:1;
-  padding:10px 10px 10px 40px;
-}
-.page-col-one-row-three{
-  grid-row: 3;
-  grid-column:1;
-  padding:10px 10px 10px 40px;
-}
-.page-col-two-wrapper{
-  display:grid;
-  grid-template-columns:repeat(1,45vw);
-  grid-auto-rows:minmax(20px,auto);
-}
-.page-col-two{
-  grid-row: 1;
-  grid-column:1;
-  margin:10px 10px 10px 10px;
-  padding:10px 10px 10px 10px;
-}
-
-/*Hub Section*/
-.hub .wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
-    background: white;
-    padding:10px 10px 0px 10px;
-  }
-  .hub .new{
-    grid-row:2;
-    grid-column:2/3;
-    padding-bottom: 50px;
-  }
-  .hub .upload {
-    grid-row: 3;
-    grid-column: 2/3;
-    padding-bottom: 50px;
-  }
-  .OverviewWrapper {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: minmax(25px, auto);
-      background-color: #ffffdd;
-      padding:10px 10px 0px 10px;
-    }
   .ThePage { 
-    grid-column:  3;
-    grid-row: 1;
     overflow:auto;
-    height: 775px;
+    height: 400px;
     border: 1px solid;
-    box-shadow: 5px 10px #888888;
-    margin-top:5px;
-    background-color:white;
+    margin-top:50px;
+    background-color:white;    
+    width:55%;
 
-  }
-  .TheNote { 
-    grid-column:  3;
-    grid-row: 1;
-    overflow:auto;
-    height: 387px;
-    border: 1px solid;
-    box-shadow: 5px 10px #888888;
-    margin-top:5px;
-    background-color:white;
   }
   .readOnlyDisplay pre{
     text-align:left;
@@ -135,13 +45,8 @@ lightest to darkest
     margin: 0px;
     padding: 8px;
   }
-  .TitleSection{
-    grid-column: 1;
-    grid-row: 1;
-  }
-  .notebooklist{
-    grid-column: 2/4;
-    grid-row: 1;
+  .readOnlyDisplay{
+    margin-top:10px;
   }
   input{
     color:rgb(12, 11, 11);
@@ -171,17 +76,79 @@ lightest to darkest
     border-radius: 8px;
   }
   
-  .TheNote textarea{    
-    width:90%;
-    height: 750px;
+ 
+  .readOnlyDisplay textarea{    
+    width:60%;
+    height: 400px;
   }
   textarea{ 
-    padding:10px;
     color:black;   
     background: none;
-    border: 2px solid #4d5d53;
-    border-radius: 8px;
     resize: none;
+    border: 1px solid black;
     background-color:white;
-    box-shadow: 5px 6px #888888;
   }
+.dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding:5px 10px;
+  font-family: inherit; 
+  margin: 0; 
+}
+
+
+ .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+ 
+
+.dropdown-content button {
+  float: none;
+  color: white;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  background-color:none;
+}
+
+.show {
+  display: inline-flex;
+}
+
+.burger{
+  width: 25px;
+  height: 2px;
+  background-color: white;
+  margin: 6px 0;
+  border-radius: 12px;
+}
+
+button i{
+  color:white;
+}
+
+/*I like this for a animation need to work more on it*/
+.flip-animation{
+  animation-name: flip;
+  animation-duration: 2s;
+  /*
+  transform: rotateY(180deg)
+  */
+}
+
+@keyframes flip {
+  from {transform: rotateY(0deg);}
+  to {transform: rotateY(360deg);}
+}
